added many kc endpoints